[package]
name = "yielding-async-executor"
version = "0.10.0"
authors = [
  "Yurii Rashkovskii <yrashk@gmail.com>",
  "Jarrod Overson <jsoverson@gmail.com>",
]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Async executor with configurable yielding"
repository = "https://github.com/vinodotdev/async-executor"
documentation = "https://docs.rs/yielding-async-executor"
readme = "README.md"
keywords = ["wasm", "async"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
futures = { version = "0.3", features = ["std"] }
pin-project = { version = "1.0" }

[target.wasm32-unknown-unknown.dependencies]


[target.wasm32-unknown-unknown.dev-dependencies]

[dev-dependencies]
tokio = { version = "1.1.1", features = ["sync", "rt"] }

[features]
default = []
debug = []
